--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>excelReaper</artifactId>
             <version>1.0.0.0-STABLE</version>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.2.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
